<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">"تقویم ایرانی"</string>
    <string name="what_label">"چه چیزی"</string>
    <string name="where_label">"کجا"</string>
    <string name="when_label">"زمان"</string>
    <string name="timezone_label">"منطقهٔ زمانی"</string>
    <string name="attendees_label">"مهمان‌ها"</string>
    <string name="today">"امروز"</string>
    <string name="tomorrow">"فردا"</string>
    <string name="today_at_time_fmt">"امروز در <xliff:g id="TIME_INTERVAL">%s</xliff:g>"</string>
    <string name="tomorrow_at_time_fmt">"فردا در <xliff:g id="TIME_INTERVAL">%s</xliff:g>"</string>
    <string name="date_time_fmt">"<xliff:g id="DATE">%s</xliff:g>، <xliff:g id="TIME_INTERVAL">%s</xliff:g>"</string>
    <string name="repeats_label">"تکرار"</string>
    <string name="no_title_label">"(بدون عنوان)"</string>
    <plurals name="Nminutes">
        <item quantity="one">"۱ دقیقه"</item>
        <item quantity="other">"<xliff:g id="COUNT">%d</xliff:g> دقیقه"</item>
    </plurals>
    <plurals name="Nmins">
        <item quantity="one">"۱ دقیقه"</item>
        <item quantity="other">"<xliff:g id="COUNT">%d</xliff:g> دقیقه"</item>
    </plurals>
    <plurals name="Nhours">
        <item quantity="one">"۱ ساعت"</item>
        <item quantity="other">"<xliff:g id="COUNT">%d</xliff:g> ساعت"</item>
    </plurals>
    <plurals name="Ndays">
        <item quantity="one">"۱ روز"</item>
        <item quantity="other">"<xliff:g id="COUNT">%d</xliff:g> روز"</item>
    </plurals>
    <plurals name="weekN">
        <item quantity="other">"هفته <xliff:g id="COUNT">%d</xliff:g>"</item>
    </plurals>
    <string name="calendar_refresh">"تازه کردن"</string>
    <string name="show_day_view">"نمایش روز"</string>
    <string name="agenda_view">"فهرست"</string>
    <string name="day_view">"روز"</string>
    <string name="week_view">"هفته"</string>
    <string name="month_view">"ماه"</string>
    <string name="event_view">"مشاهده رویداد"</string>
    <string name="event_create">"رویداد جدید"</string>
    <string name="event_edit">"ویرایش رویداد"</string>
    <string name="event_delete">"حذف رویداد"</string>
    <string name="goto_today">"امروز"</string>
    <string name="menu_preferences">"تنظیمات"</string>
    <string name="menu_select_visible_calendars">"تقویم‌ها برای نمایش"</string>
    <string name="search">"جستجو"</string>
    <string name="hide_controls">"مخفی کردن کنترل ها"</string>
    <string name="show_controls">"نمایش کنترل ها"</string>
    <string name="select_visible_calendars_title">"تقویم‌های موردنظر برای نمایش"</string>
    <string name="synced">"همگام‌سازی شده"</string>
    <string name="not_synced">"همگام‌سازی نشده"</string>
    <string name="acct_not_synced">"این حساب همگام نمی‌شود، بنابراین تقویم‌های شما ممکن است به روز نباشند."</string>
    <string name="accounts">"حساب‌ها و همگام‌سازی"</string>
    <string name="select_synced_calendars_title">"تقویم‌های موردنظر برای همگام‌سازی"</string>
    <string name="select_synced_calendars_button">"تقویم‌ها برای همگام‌سازی"</string>
    <string name="hint_what">"نام رویداد"</string>
    <string name="hint_where">"مکان"</string>
    <string name="hint_description">"توضیح"</string>
    <string name="hint_attendees">"مهمان ها"</string>
    <string name="creating_event">"رویداد ایجاد شد."</string>
    <string name="saving_event">"رویداد ذخیره شد."</string>
    <string name="empty_event">"رویداد خالی ایجاد نمی‌شود."</string>
    <string name="creating_event_with_guest">"‏دعوت نامه‎ها ارسال خواهند شد."</string>
    <string name="saving_event_with_guest">"‏به‌روزرسانی‎ها ارسال خواهند شد."</string>
    <string name="rsvp_accepted">"پاسخ مثبت داد."</string>
    <string name="rsvp_tentative">"پاسخ «شاید» داد."</string>
    <string name="rsvp_declined">"پاسخ منفی داد."</string>
    <string name="create_event_dialog_save">"ذخیره"</string>
    <string name="alert_title">"اعلان‌های تقویم"</string>
    <string name="event_info_title">"مشاهده رویداد"</string>
    <string name="event_info_title_invite">"دعوت نامه جلسه"</string>
    <string name="edit_event_to_label">"تا"</string>
    <string name="edit_event_from_label">"از"</string>
    <string name="edit_event_all_day_label">"همه روز"</string>
    <string name="edit_event_calendar_label">"تقویم"</string>
    <string name="edit_event_show_all">"نمایش همه"</string>
    <string name="description_label">"توضیح"</string>
    <string name="presence_label">"نمایش من به‌عنوان"</string>
    <string name="privacy_label">"رازداری"</string>
    <string name="reminders_label">"افزودن یادآور"</string>
    <string name="no_syncable_calendars">"تقویمی موجود نیست"</string>
    <string name="no_calendars_found">"قبل از اینکه بتوانید یک رویداد اضافه کنید، باید حداقل یک حساب تقویم به دستگاه خود اضافه کرده و تقویمی را قابل مشاهده کنید. برای افزودن یک حساب، \"افزودن حساب\" را لمس کنید (اگر بتازگی حسابی اضافه کرده‌اید، منتظر بمانید تا همگامسازی آن تمام شود و سپس دوباره امتحان کنید). همچنین می‌توانید \"لغو\" را لمس کرده و اطمینان حاصل کنید که حداقل یک تقویم قابل مشاهده است."</string>
    <string name="create_an_account_desc">"‏Calendar با یک حساب Google بهتر کار می‌کند.\n\n• از هر مرورگر وب به آن دسترسی دارید\n• از رویدادهای خود به طور امن پشتیبان تهیه کنید"</string>
    <string name="add_account">"افزودن حساب"</string>
    <string name="view_event_calendar_label">"تقویم:"</string>
    <string name="view_event_organizer_label">"سازمان دهنده:"</string>
    <string name="choose_event_color_label">"انتخاب رنگ رویداد"</string>
    <string name="event_color_picker_dialog_title">"رنگ رویداد"</string>
    <string name="event_color_set_to_default">"تنظیم روی رنگ تقویم پیش‌فرض"</string>
    <string name="calendar_color_picker_dialog_title">"رنگ تقویم"</string>
    <string name="calendar_square_color_picker_description">"انتخابگر رنگ"</string>
    <string name="view_event_response_label">"حاضر می‌شوید؟"</string>
    <string name="response_yes">"بله"</string>
    <string name="response_maybe">"شاید"</string>
    <string name="response_no">"خیر"</string>
    <string name="email_guests_label">"ارسال ایمیل به مهمانان"</string>
    <string name="email_organizer_label">"سازمان‌دهنده ایمیل"</string>
    <string name="email_picker_label">"ایمیل با"</string>
    <string name="email_subject_prefix" translatable="false">Re:\u0020</string>
    <string name="event_not_found">"رویداد یافت نشد."</string>
    <string name="map_label">"نقشه"</string>
    <string name="call_label">"تماس"</string>
    <string name="quick_response_settings">"پاسخ‌های سریع"</string>
    <string name="quick_response_settings_summary">"ویرایش پاسخ‌های پیش‌فرض هنگام ارسال ایمیل به مهمان‌ها"</string>
    <string name="quick_response_settings_title">"ویرایش پاسخ‌های سریع"</string>
    <string name="quick_response_settings_edit_title">"پاسخ سریع"</string>
    <string name="quick_response_dialog_title">"انتخاب پاسخ سریع"</string>
    <string name="quick_response_email_failed">"برنامه ایمیل یافت نشد"</string>
    <string-array name="quick_response_defaults">
        <item>"با تأخیر چند دقیقه‌ای اجرا می‌شود."</item>
        <item>"۱۰ دقیقه دیگر آنجا خواهم بود."</item>
        <item>"دست به کار شوید و بدون من شروع کنید."</item>
        <item>"با عرض پوزش، نمی‌توانم این را ایجاد کنم. باید دوباره برنامه‌ریزی کنیم."</item>
    </string-array>
    <string name="quick_response_custom_msg">"نوشتن ..."</string>
    <string name="event_info_organizer">"سازمان دهنده:"</string>
    <string name="event_info_reminders_label">"یادآورها"</string>
    <string name="agenda_today">"امروز، <xliff:g id="DATE">%1$s</xliff:g>"</string>
    <string name="agenda_yesterday">"دیروز، <xliff:g id="DATE">%1$s</xliff:g>"</string>
    <string name="agenda_tomorrow">"فردا، <xliff:g id="DATE">%1$s</xliff:g>"</string>
    <string name="loading">"در حال بارگیری…"</string>
    <string name="show_older_events">"برای مشاهده رویدادهای قبل از <xliff:g id="OLDEST_SEARCH_RANGE">%1$s</xliff:g> لمس کنید"</string>
    <string name="show_newer_events">"جهت مشاهده رویدادهای پس از <xliff:g id="NEWEST_SEARCH_RANGE">%1$s</xliff:g> لمس کنید"</string>
    <string name="search_title">"جستجوی تقویم‌های من"</string>
    <string name="edit_event_label">"جزئیات"</string>
    <string name="edit_label">"ویرایش"</string>
    <string name="delete_label">"حذف"</string>
    <string name="save_label">"انجام شد"</string>
    <string name="discard_label">"لغو"</string>
    <string name="snooze_all_label">"تعویق همه"</string>
    <string name="dismiss_all_label">"رد کردن همه"</string>
    <string name="snooze_label">"تعویق"</string>
    <string name="does_not_repeat">"رویداد یک بار"</string>
    <string name="endByDate">"؛ تا <xliff:g id="DATE">%s</xliff:g>"</string>
    <plurals name="endByCount">
        <item quantity="one">"؛ برای یکبار"</item>
        <item quantity="other">"؛ برای <xliff:g id="NUMBER">%d</xliff:g> بار"</item>
    </plurals>
    <plurals name="daily">
        <item quantity="one">"روزانه"</item>
        <item quantity="other">"هر <xliff:g id="NUMBER">%d</xliff:g> روز"</item>
    </plurals>
    <string name="every_weekday">"هر روز هفته (دوشنبه-جمعه)"</string>
    <plurals name="weekly">
        <item quantity="one">"هفتگی در روزهای <xliff:g id="DAYS_OF_WEEK">%2$s</xliff:g>"</item>
        <item quantity="other">"هر <xliff:g id="NUMBER">%1$d</xliff:g> در روزهای <xliff:g id="DAYS_OF_WEEK">%2$s</xliff:g>"</item>
    </plurals>
    <string name="monthly">"ماهانه"</string>
    <string name="yearly_plain">"سالانه"</string>
    <string name="monthly_on_day">"ماهانه (در روز <xliff:g id="DAY_OF_MONTH">%s</xliff:g>)"</string>
    <string name="yearly">"سالانه (در <xliff:g id="DATES">%s</xliff:g>)"</string>
    <string name="custom" product="default">"سفارشی (سفارشی کردن در تلفن امکان‌پذیر نیست)"</string>
    <string name="modify_event">"فقط این رویداد تغییر داده شود"</string>
    <string name="modify_all">"همه رویدادهای موجود در مجموعه‌ها تغییر داده شود"</string>
    <string name="modify_all_following">"این رویداد و همه رویدادهای آینده تغییر داده شود"</string>
    <string name="new_event_dialog_label">"رویداد جدید"</string>
    <string name="new_event_dialog_option">"رویداد جدید"</string>
    <string name="delete_this_event_title">"این رویداد حذف شود؟"</string>
    <string name="preferences_general_title">"تنظیم نمای تقویم"</string>
    <string name="preferences_reminder_title">"اعلان‌ها و یادآورها"</string>
    <string name="preferences_hide_declined_title">"پنهان کردن رویدادهای رد شده"</string>
    <string name="preferences_clear_search_history_title">"پاک کردن سابقه جستجو"</string>
    <string name="preferences_clear_search_history_summary">"تمام جستجوهایی را که انجام داده‌اید، حذف کنید"</string>
    <string name="preferences_alerts_title">"اعلان‌ها"</string>
    <string name="preferences_alerts_vibrateWhen_title">"لرزش"</string>
    <string name="preferences_alerts_ringtone_title">"صدا"</string>
    <string name="preferences_alerts_popup_title">"اعلان بازشو"</string>
    <string name="preferences_default_reminder_title">"زمان یادآور پیش‌فرض"</string>
    <string name="preferences_default_reminder_dialog">"زمان یادآور پیش‌فرض"</string>
    <string name="preferences_default_reminder_default">"10"</string>
    <string name="preferences_use_home_tz_title">"استفاده از منطقهٔ زمانی مبدأ"</string>
    <string name="preferences_use_home_tz_descrip">"تقویم‌ها و زمان رویداد را حتی هنگام مسافرت به منطقهٔ زمانی مبدأ شما نمایش می‌دهد"</string>
    <string name="preferences_home_tz_title">"منطقهٔ زمانی مبدأ"</string>
    <string name="preferences_home_tz_default">America/Los_Angeles</string>
    <string name="preferences_show_week_num_title">"نمایش شماره هفته"</string>
    <string name="preferences_category_other_calendars">سایر تقویم‌ها</string>
    <string name="preferences_show_gregorian_date">"نمایش تقویم میلادی"</string>
    <string name="preferences_show_hijri_date">"نمایش تقویم قمری"</string>
</resources>